Fixing the code mirror overlapping the tab bar issue

--- a/src/components/OutputPanel/style.scss
+++ b/src/components/OutputPanel/style.scss
@@ -2,7 +2,7 @@
 // @Date:   2017-05-15T09:44:11+10:00
 // @Email:  chris@southbanksoftware.com
 // @Last modified by:   wahaj
-// @Last modified time: 2017-06-09T11:27:00+10:00
+// @Last modified time: 2017-06-09T15:41:30+10:00
 @import '../../styles/_defaultTheme.scss';
 .outputPanel {
   flex: 1;
@@ -45,7 +45,7 @@
         padding-bottom: 30px;
         .ReactCodeMirror {
           .CodeMirror {
-            bottom: 20px;
+            top: 0px;
           }
         }
         .outputTerminal {
